fix: fixed header scrollbar in IE 10

--- a/src/react/MaintenanceCost/src/components/Chart/Analysis/Manual/index.scss
+++ b/src/react/MaintenanceCost/src/components/Chart/Analysis/Manual/index.scss
@@ -46,6 +46,12 @@
         padding: 4px 0;
       }
     }
+
+    :global .ant-table-fixed-header .ant-table-scroll .ant-table-header {
+      overflow-x: hidden;
+      overflow-y: scroll;
+    }
+
     :global .ant-table-body {
       table {
         margin-bottom: 0;
